feat: initial project setup with complete ride-sharing features
- Authentication: SMS OTP login with JWT token management
- Driver features: service creation, passenger management, real-time tracking
- Passenger features: service search, join requests, live location tracking
- Backend: Node.js/Express API with SQLite database
- Frontend: React Native Expo with TypeScript
- Added comprehensive README and Git workflow documentation

--- a/app.json
+++ b/app.json
@@ -13,18 +13,34 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "UIBackgroundModes": [
+          "location",
+          "fetch"
+        ],
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "Uygulama arka planda seyahat takibi yapabilmek için konumunuza erişmelidir."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "permissions": [
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION",
+        "FOREGROUND_SERVICE",
+        "FOREGROUND_SERVICE_LOCATION"
+      ],
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "@react-native-community/datetimepicker"
+    ]
   }
 }
