--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.3",
+    "@mapbox/polyline": "^1.2.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.10.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.0",
+    "axios": "^1.7.9",
     "expo": "~54.0.31",
     "expo-device": "^8.0.10",
     "expo-location": "~19.0.8",
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.21",
+    "@types/mapbox__polyline": "^1.0.5",
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
   },
